[build-system]
requires = ['setuptools>=68']
build-backend = 'setuptools.build_meta'

[project]
name = 'atomadic'
version = '0.2.6'
description = 'Atomadic Python SDK -- one MCP, entitlement-gated tool-sets'
readme = 'README.md'
requires-python = '>=3.9'
license = { text = 'Apache-2.0' }
authors = [{ name = 'Atomadic', email = 'support@atomadic.tech' }]
keywords = ['atomadic', 'mcp', 'agents', 'sdk', 'trust', 'verification']
classifiers = ['License :: OSI Approved :: Apache Software License', 'Programming Language :: Python :: 3', 'Topic :: Software Development :: Libraries']

[project.urls]
Homepage = 'https://atomadic.tech'
Docs = 'https://atomadic.tech/docs.html'
Issues = 'https://github.com/atomadictech/atomadic-sdk/issues'

[tool.setuptools.packages.find]
include = ['atomadic*']
